<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.vitalykulyk.metronom.MainActivity">

    <RelativeLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/manual_mode"
            android:id="@+id/textView"
            android:layout_centerHorizontal="true"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_marginTop="24dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#4ec3f7"
        android:paddingTop="16dp"
        android:paddingBottom="16dp">

        <RelativeLayout
            android:id="@+id/vibrationLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:clickable="true"
            android:focusable="true">

            <ImageButton
                android:id="@+id/vibrationButton"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_vibration_img"
                android:background="@null"
                android:layout_centerInParent="true"
                android:paddingBottom="16dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vibration"
                android:layout_alignBottom="@id/vibrationButton"
                android:textSize="12sp"
                android:textColor="#ffffff"
                />

        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/flashLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:clickable="true"
            android:focusable="true"
            >

            <ImageButton
                android:id="@+id/flashButton"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_flash_img"
                android:background="@null"
                android:paddingBottom="16dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/flash"
                android:layout_alignBottom="@id/flashButton"
                android:textSize="12sp"
                android:textColor="#ffffff"
                android:layout_centerHorizontal="true"
                />

        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/soundLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="24dp"
            android:layout_alignParentRight="true"
            android:clickable="true"
            android:focusable="true"
            >

            <ImageButton
                android:id="@+id/soundButton"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_sound_img"
                android:background="@null"
                android:paddingBottom="16dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sound"
                android:layout_alignBottom="@id/soundButton"
                android:textSize="12sp"
                android:textColor="#ffffff"
                />

        </RelativeLayout>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp">

        <TextView
            android:id="@+id/settingsText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_text"
            android:layout_marginTop="24dp"
            android:layout_centerHorizontal="true"
            android:textSize="18sp"
            />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/settingsText"
            android:layout_centerInParent="true"
            android:layout_centerHorizontal="true">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                >

                <TextView
                    android:id="@+id/speedEdit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:singleLine="true"
                    android:numeric="integer"
                    android:inputType="numberDecimal"
                    android:editable="true"
                    android:focusable="true"
                    android:clickable="true"
                    android:lines="1"
                    android:background="@android:color/transparent"
                    android:textSize="36sp"/>

                <TextView
                    android:id="@+id/bmpText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bmp"
                    android:layout_toRightOf="@id/speedEdit"
                    android:layout_marginLeft="24dp"
                    android:layout_marginTop="24dp"
                    android:textSize="24sp"
                    />

            </LinearLayout>



        </RelativeLayout>



    </RelativeLayout>

    <SeekBar
        android:id="@+id/seekBar1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="26dp"
        android:max="400"/>

    <RelativeLayout
        android:id="@+id/indicator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_centerInParent="true">

            <TextView
                android:id="@+id/indicatorText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/indicator"
                android:layout_centerHorizontal="true"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <View
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:id="@+id/indicatorView"
                    android:background="@drawable/circle"
                    android:layout_marginBottom="16dp"
                    android:layout_centerInParent="true"
                    />

            </RelativeLayout>



        </LinearLayout>


    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start"
            android:layout_centerInParent="true"
            android:background="#03a9f4"
            android:id="@+id/startButton"/>

    </RelativeLayout>


</LinearLayout>
